--- a/src/main/resources/static/landing/landing.html
+++ b/src/main/resources/static/landing/landing.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>ProductDock Library</title>
-    <link rel="stylesheet" href="./landing/landing.css" />
+    <link rel="stylesheet" href="./landing.css" />
     <link
       href="http://fonts.googleapis.com/css?family=Roboto:400,300,700,500,100"
       rel="stylesheet"
@@ -17,10 +17,10 @@
     <div class="main-div">
       <div class="landing-container">
         <div class="img-div">
-          <img class="landing-img" src="./landing/landing-cover.png" alt="" />
+          <img class="landing-img" src="./cover-landing.png" alt="" />
         </div>
         <div class="content-div">
-          <img src="./landing/pd-logo.svg" alt="logo" />
+          <img src="./pd-logo-landing.svg" alt="logo" />
 
           <div class="landing-text">
             <div class="welcome-text">
@@ -36,18 +36,11 @@
           </div>
           <a class="login-button" href="/oauth2/authorization/google">
             <div class="button-container">
-              <img src="./landing/google.svg" alt="google login" class="icon" />
+              <img src="./google-landing.svg" alt="google login" class="icon" />
 
               <p class="login-button-text">Sign in with Google</p>
             </div></a
           >
-          <!-- <button onclick="onClickSignIn()" class="login-button" type="button">
-            <div class="button-container">
-              <img src="./landing/google.svg" alt="google login" class="icon" />
-
-              <Typography>Sign in with Google</Typography>
-            </div>
-          </button> -->
         </div>
       </div>
     </div>
