Exchange token before any request to downstream services

--- a/src/main/resources/static/landing/landing.html
+++ b/src/main/resources/static/landing/landing.html
@@ -28,7 +28,7 @@
               <p class="large-font"><b>ProductDock</b> Library</p>
             </div>
             <p class="small-font motivation">
-              A place where you can find a book to read and help your coleagues
+              A place where you can find a book to read and help your colleagues
               do the same!
             </p>
 
